--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,12 @@ console_log = "1.0.0"
 console_error_panic_hook = "0.1.7"
 futures = "0.3.25"
 cfg-if = "1.0.0"
-leptos = { version = "0.2.5", default-features = false, features = ["serde"] }
-leptos_axum = { version = "0.2.5", optional = true }
-leptos_meta = { version = "0.2.5", default-features = false }
-leptos_router = { version = "0.2.5", default-features = false }
+leptos = { git = "https://github.com/leptos-rs/leptos", default-features = false, features = [
+	"serde",
+] }
+leptos_axum = { git = "https://github.com/leptos-rs/leptos", optional = true }
+leptos_meta = { git = "https://github.com/leptos-rs/leptos", default-features = false }
+leptos_router = { git = "https://github.com/leptos-rs/leptos", default-features = false }
 log = "0.4.17"
 simple_logger = "4.0.0"
 serde = { version = "1", features = ["derive"] }
@@ -49,7 +51,15 @@ ssr = [
 ]
 
 [package.metadata.cargo-all-features]
-denylist = ["axum", "tower", "tower-http", "tokio", "sqlx", "leptos_axum","femark"]
+denylist = [
+	"axum",
+	"tower",
+	"tower-http",
+	"tokio",
+	"sqlx",
+	"leptos_axum",
+	"femark",
+]
 skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]
 
 [package.metadata.leptos]
