--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,10 @@ console_log = "1.0.0"
 console_error_panic_hook = "0.1.7"
 futures = "0.3.25"
 cfg-if = "1.0.0"
-leptos = { git = "https://github.com/leptos-rs/leptos", default-features = false, features = [
-	"serde",
-] }
-leptos_axum = { git = "https://github.com/leptos-rs/leptos", optional = true }
-leptos_meta = { git = "https://github.com/leptos-rs/leptos", default-features = false }
-leptos_router = { git = "https://github.com/leptos-rs/leptos", default-features = false }
+leptos = { version = "0.4.8", features = ["nightly"] }
+leptos_axum = { version = "0.4.8", optional = true }
+leptos_meta = { version = "0.4.8", features = ["nightly"] }
+leptos_router = { version = "0.4.8", features = ["nightly"] }
 log = "0.4.17"
 simple_logger = "4.0.0"
 serde = { version = "1", features = ["derive"] }
