--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,19 @@ console_log = "1.0.0"
 console_error_panic_hook = "0.1.7"
 futures = "0.3.25"
 cfg-if = "1.0.0"
-leptos = { version = "0.5", features = ["nightly", "experimental-islands"] }
-leptos_axum = { version = "0.5", optional = true, features = [
+leptos = { git = "https://github.com/leptos-rs/leptos", features = [
+	"nightly",
 	"experimental-islands",
 ] }
-leptos_meta = { version = "0.5", features = ["nightly"] }
-leptos_router = { version = "0.5", features = ["nightly"] }
+leptos_axum = { git = "https://github.com/leptos-rs/leptos", optional = true, features = [
+	"experimental-islands",
+] }
+leptos_meta = { git = "https://github.com/leptos-rs/leptos", features = [
+	"nightly",
+] }
+leptos_router = { git = "https://github.com/leptos-rs/leptos", features = [
+	"nightly",
+] }
 log = "0.4.17"
 simple_logger = "4.0.0"
 serde = { version = "1", features = ["derive"] }
@@ -36,7 +43,7 @@ sqlx = { version = "0.6.2", features = [
 ], optional = true }
 thiserror = "1.0.38"
 wasm-bindgen = "0.2.85"
-femark = { version = "0.1.3", optional = true }
+femark = { version = "=0.1.3", optional = true }
 axum-extra = { version = "0.7.4", optional = true, features = ["cookie"] }
 web-sys = { version = "0.3", optional = true, features = [
 	"HtmlDocument",
