--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,39 +12,28 @@ console_log = "1.0.0"
 console_error_panic_hook = "0.1.7"
 futures = "0.3.25"
 cfg-if = "1.0.0"
-leptos = { git = "https://github.com/leptos-rs/leptos", features = [
-	"nightly",
+leptos = { version = "0.6.14", features = ["nightly", "experimental-islands"] }
+leptos_axum = { version = "0.6.14", optional = true, features = [
 	"experimental-islands",
 ] }
-leptos_axum = { git = "https://github.com/leptos-rs/leptos", optional = true, features = [
-	"experimental-islands",
-] }
-leptos_meta = { git = "https://github.com/leptos-rs/leptos", features = [
-	"nightly",
-] }
-leptos_router = { git = "https://github.com/leptos-rs/leptos", features = [
-	"nightly",
-] }
+leptos_meta = { version = "0.6.14", features = ["nightly"] }
+leptos_router = { version = "0.6.14", features = ["nightly"] }
 log = "0.4.17"
-simple_logger = "4.0.0"
+simple_logger = "5.0.0"
 serde = { version = "1", features = ["derive"] }
-axum = { version = "0.6.1", optional = true }
-tower = { version = "0.4.13", optional = true }
-tower-http = { version = "0.4", features = [
+axum = { version = "0.7", optional = true }
+tower = { version = "0.5", optional = true, features = ["util"] }
+tower-http = { version = "0.5", features = [
 	"compression-gzip",
 	"fs",
 	"trace",
 ], optional = true }
 tokio = { version = "1.22.0", features = ["full"], optional = true }
-http = { version = "0.2.8" }
-sqlx = { version = "0.6.2", features = [
-	"runtime-tokio-rustls",
-	"sqlite",
-], optional = true }
+http = { version = "1" }
 thiserror = "1.0.38"
-wasm-bindgen = "0.2.85"
+wasm-bindgen = "=0.2.93"
 femark = { version = "=0.1.3", optional = true }
-axum-extra = { version = "0.7.4", optional = true, features = ["cookie"] }
+axum-extra = { version = "0.9", optional = true, features = ["cookie"] }
 web-sys = { version = "0.3", optional = true, features = [
 	"HtmlDocument",
 	"MediaQueryList",
@@ -64,7 +53,6 @@ ssr = [
 	"dep:tower",
 	"dep:tower-http",
 	"dep:tokio",
-	"dep:sqlx",
 	"leptos/ssr",
 	"leptos_meta/ssr",
 	"leptos_router/ssr",
