--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,10 @@ console_log = "1.0.0"
 console_error_panic_hook = "0.1.7"
 futures = "0.3.25"
 cfg-if = "1.0.0"
-leptos = { version = "0.7.0-beta", features = [
-	"nightly",
-	"experimental-islands",
-] }
-leptos_axum = { version = "0.7.0-beta", optional = true }
-leptos_meta = { version = "0.7.0-beta" }
-leptos_router = { version = "0.7.0-beta", features = ["nightly"] }
+leptos = { version = "0.7.0", features = ["nightly", "islands"] }
+leptos_axum = { version = "0.7.0", optional = true }
+leptos_meta = { version = "0.7.0" }
+leptos_router = { version = "0.7.0", features = ["nightly"] }
 log = "0.4.17"
 simple_logger = "5.0.0"
 serde = { version = "1", features = ["derive"] }
@@ -32,7 +29,7 @@ tower-http = { version = "0.5", features = [
 tokio = { version = "1.22.0", features = ["full"], optional = true }
 http = { version = "1" }
 thiserror = "1.0.38"
-wasm-bindgen = "=0.2.93"
+wasm-bindgen = "=0.2.96"
 femark = { version = "=0.1.3", optional = true }
 axum-extra = { version = "0.9", optional = true, features = ["cookie"] }
 web-sys = { version = "0.3", optional = true, features = [
